feat: add agent wallet operations

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ RPC_ENDPOINT=https://api.devnet.solana.com
 LLM_PROVIDER=openai
 LLM_MODEL=gpt-4o-mini
 AGENT_ID=goblin-sandbox-001
+SOLANA_KEYPAIR=[1,2,3]
