feat(planner): wire Slack /goblin to GPT-5 with non-blocking reply; clean Dockerfile/app.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-slack_bolt
+#slack_bolt==1.18.0
+#Flask==2.3.2
+#gunicorn==21.2.0
+#python-dotenv==1.0.0
+#openai==1.21.0
+#solana-py
+#requests==2.31.0
+#streamlit==1.29.0
+
+flask
+gunicorn
+slack-bolt
+python-dotenv
 openai
-solana-py
 requests
-streamlit
-dotenv
