--- a/executor-node/package.json
+++ b/executor-node/package.json
@@ -1,29 +1,16 @@
 {
   "name": "executor-node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "test": "node --version"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "@solana/web3.js": "^1.98.4",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+  "version": "0.1.0",
+  "private": true,
   "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.92.3",
-    "axios": "^1.6.7",
+    "@solana/web3.js": "^1.93.0",
+    "axios": "^1.7.2",
     "bs58": "^5.0.0",
-    "express": "^4.18.2"
+    "express": "^4.19.2"
   }
 }
