--- a/executor-node/Dockerfile
+++ b/executor-node/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:20-alpine
+FROM node:20-slim
 WORKDIR /app
 COPY package*.json ./
-RUN npm install --production
+RUN npm ci --omit=dev || npm install --omit=dev
 COPY . .
 EXPOSE 8080
 CMD ["node", "index.js"]
