docs: add branch-safe deploy notes

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,19 @@
-# Example placeholders only — use Secret Manager in CI/CD
-GOBLIN_ENV=DEV
-RPC_ENDPOINT=https://api.devnet.solana.com
-LLM_PROVIDER=openai
-LLM_MODEL=gpt-4o-mini
-AGENT_ID=goblin-sandbox-001
-SOLANA_KEYPAIR=[1,2,3]
+# Example placeholders only — use Secret Manager or .env for local dev
+
+# Planner
+OPENAI_API_KEY=
+SLACK_BOT_TOKEN=
+SLACK_SIGNING_SECRET=
+EXECUTOR_URL=
+AUTO_MAX_TRADE_SOL=0.25
+AUTO_MAX_STAKE_SOL=0.25
+ALLOWED_PROTOCOLS=jito
+ALLOWED_MINTS=SOL,USDC,JITOSOL,BONK
+PRICE_IMPACT_MAX_PCT=2
+SECRET_APPROVAL_KEY=
+
+# Executor
+RPC_URL=
+AGENT_SECRET_B58=
+PRIORITY_FEE_MICRO_LAMPORTS=0
+
