Telegram Service Opertional

--- a/telegram_service/Dockerfile
+++ b/telegram_service/Dockerfile
@@ -1,11 +1,7 @@
 FROM python:3.12-slim
 WORKDIR /app
-
 COPY telegram_service/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
-
-# copy the WHOLE repo so planner/ is available
-COPY . .
-
+COPY . .                                   # copies planner/ into image
 ENV PORT=8080
 CMD ["python", "telegram_service/server.py"]
