--- a/telegram_service/requirements.txt
+++ b/telegram_service/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot[webhooks]==20.8
-python-dotenv
-requests
+python-dotenv==1.0.1
+requests==2.32.3
 aiohttp
-openai
+openai>=1.0,<2
