Fix: Disable automatic run cancellation
- Changed cancel-in-progress from true to false in both workflows
- This prevents runs from being cancelled when new pushes happen
- Users will no longer get pinged about cancelled runs
- Each run will complete fully instead of being interrupted

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 # Cancel older runs on the same branch/PR so only the latest runs.
 concurrency:
   group: ci-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
   test:
