--- a/.github/workflows/gitops-pipeline.yml
+++ b/.github/workflows/gitops-pipeline.yml
@@ -10,7 +10,7 @@ on:
 # Cancel older runs on the same branch/PR
 concurrency:
   group: gitops-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 env:
   PYTHON_VERSION: '3.12'
