--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -13,6 +13,9 @@ jobs:
   deploy-staging:
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
@@ -20,16 +23,23 @@ jobs:
         with:
           python-version: '3.12'
       - name: Auth (JSON credentials)
-        if: ${{ secrets.GCP_SA_KEY != '' }}
+        if: ${{ secrets.GCP_SA_KEY != '' || secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_SA_KEY != '' && secrets.GCP_SA_KEY || secrets.GOOGLE_CLOUD_CREDENTIALS }}
       - name: Auth (Workload Identity Federation)
-        if: ${{ secrets.GCP_SA_KEY == '' }}
+        if: ${{ secrets.GCP_SA_KEY == '' && secrets.GOOGLE_CLOUD_CREDENTIALS == '' }}
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
           service_account: ${{ secrets.GCP_WIF_SERVICE_ACCOUNT }}
+      - name: Show selected auth path (masked)
+        run: |
+          if [ -n "${{ secrets.GCP_SA_KEY }}${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]; then
+            echo "Using JSON credentials auth"
+          else
+            echo "Using Workload Identity Federation auth"
+          fi
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
