--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -22,24 +22,27 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+      - name: Detect auth mode
+        env:
+          JSON1: ${{ secrets.GCP_SA_KEY }}
+          JSON2: ${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}
+        run: |
+          if [ -n "${JSON1}${JSON2}" ]; then
+            echo "HAS_JSON=true" >> $GITHUB_ENV
+          else
+            echo "HAS_JSON=false" >> $GITHUB_ENV
+          fi
       - name: Auth (JSON credentials)
-        if: ${{ secrets.GCP_SA_KEY != '' || secrets.GOOGLE_CLOUD_CREDENTIALS != '' }}
+        if: env.HAS_JSON == 'true'
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY != '' && secrets.GCP_SA_KEY || secrets.GOOGLE_CLOUD_CREDENTIALS }}
       - name: Auth (Workload Identity Federation)
-        if: ${{ secrets.GCP_SA_KEY == '' && secrets.GOOGLE_CLOUD_CREDENTIALS == '' }}
+        if: env.HAS_JSON != 'true'
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ secrets.GCP_WIF_PROVIDER }}
           service_account: ${{ secrets.GCP_WIF_SERVICE_ACCOUNT }}
-      - name: Show selected auth path (masked)
-        run: |
-          if [ -n "${{ secrets.GCP_SA_KEY }}${{ secrets.GOOGLE_CLOUD_CREDENTIALS }}" ]; then
-            echo "Using JSON credentials auth"
-          else
-            echo "Using Workload Identity Federation auth"
-          fi
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
